<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF7F2"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_Logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_max="250dp"
                app:layout_constraintHeight_percent="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="250dp"
                app:layout_constraintWidth_percent="0.6"
                app:srcCompat="@drawable/logo2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_Login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_Logo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginBottom="7dp"
                android:autofillHints="phone"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_ukraine_flag"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:hint="@string/default_of_phone_number"
                android:inputType="phone"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_max="270dp"
                app:layout_constraintWidth_percent="0.65" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:autofillHints="password"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_ic_lock"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tvForgotPas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPhone"
                app:layout_constraintWidth_max="270dp"
                app:layout_constraintWidth_percent="0.65" />

            <TextView
                android:id="@+id/tvForgotPas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="1dp"
                android:fontFamily="@font/inter"
                android:text="@string/forgot_password"
                android:textColor="#888888"
                android:textSize="15sp"

                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/btnSignIn"
                app:layout_constraintEnd_toEndOf="@id/etPassword"
                app:layout_constraintTop_toBottomOf="@id/etPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/btn_sign_in_background_gradient"
                android:fontFamily="@font/inter"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toTopOf="@id/btnSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPas"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_max="270dp"
                app:layout_constraintWidth_percent="0.65" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/inter"
                android:text="@string/don_t_have_an_account"
                android:textColor="#888888"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/btnSignUp"
                app:layout_constraintEnd_toStartOf="@id/btnSignUp"
                app:layout_constraintStart_toStartOf="@+id/btnSignIn"
                app:layout_constraintTop_toTopOf="@id/btnSignUp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_sign_up_background_gradient"
                android:fontFamily="@font/inter"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/sign_up"
                android:textColor="#FF6B00"

                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/btnSignIn"
                app:layout_constraintTop_toBottomOf="@id/btnSignIn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>