<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF7F2"
    tools:context=".DashboardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dashboard_top"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_mini"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/search"
            app:layout_constraintHeight_max="50dp"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="50dp"
            app:layout_constraintWidth_percent="1"
            app:srcCompat="@drawable/logo_mini_50_50" />

        <SearchView
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/custom_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/logo_mini"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.65"
            tools:layout_editor_absoluteX="120dp"
            tools:layout_editor_absoluteY="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dashboard_bottom"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/clMap"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@id/tvMain"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@+id/tvMain"
                app:layout_constraintHeight_max="50dp"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintStart_toStartOf="@+id/tvMain"
                app:layout_constraintWidth_max="50dp"
                app:layout_constraintWidth_percent="1"
                app:srcCompat="@drawable/ic_home" />

            <TextView
                android:id="@+id/tvMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/clChats"
            app:layout_constraintStart_toEndOf="@id/clHome">

            <ImageView
                android:id="@+id/map"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@id/tvMap"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_max="50dp"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_max="50dp"
                app:layout_constraintWidth_percent="1"
                app:srcCompat="@drawable/ic_map" />

            <TextView
                android:id="@+id/tvMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                app:layout_constraintBottom_toBottomOf="@+id/map"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clChats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/clProfile"
            app:layout_constraintStart_toEndOf="@id/clMap">

            <ImageView
                android:id="@+id/chats"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@id/tvChats"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_max="50dp"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_max="50dp"
                app:layout_constraintWidth_percent="1"
                app:srcCompat="@drawable/ic_chats" />

            <TextView
                android:id="@+id/tvChats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chats"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chats" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/clChats">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@id/tvProfile"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_max="50dp"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_max="50dp"
                app:layout_constraintWidth_percent="1"
                app:srcCompat="@drawable/ic_profile_male" />

            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>